--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
       Hello
+      <ul>
+        <li><a href="components/svelte-guard-history-router">svelte-guard-history-router</a></li>
+        <li><a href="components/svelte-websocket-store">svelte-websocket-store</a></li>
+        <li><a href="components/svelte-session-manager">svelte-session-manager</a></li>
+      </ul>
   </body>
 </html>
