--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
+    <title>arlac77</title>
   </head>
   <body>
-      Hello
       <ul>
         <li><a href="components/svelte-guard-history-router">svelte-guard-history-router</a></li>
         <li><a href="components/svelte-websocket-store">svelte-websocket-store</a></li>
