feat: add svelte-common

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <li><a href="components/svelte-guard-history-router">svelte-guard-history-router</a></li>
         <li><a href="components/svelte-websocket-store">svelte-websocket-store</a></li>
         <li><a href="components/svelte-session-manager">svelte-session-manager</a></li>
+        <li><a href="components/svelte-common">svelte-common</a></li>
+        <li><a href="components/svelte-log-view">svelte-log-view</a></li>
       </ul>
   </body>
 </html>
