fix: add example to hrefs

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   </head>
   <body>
       <ul>
-        <li><a href="components/svelte-guard-history-router">svelte-guard-history-router</a></li>
-        <li><a href="components/svelte-websocket-store">svelte-websocket-store</a></li>
-        <li><a href="components/svelte-session-manager">svelte-session-manager</a></li>
-        <li><a href="components/svelte-common">svelte-common</a></li>
-        <li><a href="components/svelte-log-view">svelte-log-view</a></li>
+        <li><a href="components/svelte-guard-history-router/example/index.html">svelte-guard-history-router</a></li>
+        <li><a href="components/svelte-websocket-store/example/index.html">svelte-websocket-store</a></li>
+        <li><a href="components/svelte-session-manager/example/index.html">svelte-session-manager</a></li>
+        <li><a href="components/svelte-common/example/index.html">svelte-common</a></li>
+        <li><a href="components/svelte-log-view/example/index.html">svelte-log-view</a></li>
       </ul>
   </body>
 </html>
