fix: svelte-repository-provider

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
       <ul>
+        <li><a href="components/svelte-repository-provider/example/index.html">svelte-repository-provider</a></li>
         <li><a href="components/svelte-guard-history-router/example/index.html">svelte-guard-history-router</a></li>
         <li><a href="components/svelte-websocket-store/example/index.html">svelte-websocket-store</a></li>
         <li><a href="components/svelte-session-manager/example/index.html">svelte-session-manager</a></li>
